syntax = "proto3";

package bank;

option go_package = "sample-bank/proto";

message TransferRequest {
  string from_account_number = 1;
  string to_account_number = 2;
  double amount = 3;
}

message TransferResponse {
  string source_account_name = 1;
  string source_account_number = 2;
  string beneficiary_account_name = 3;
  string beneficiary_account_number = 4;
  double amount = 5;
  string transfer_status = 6;
}


message BalanceRequest {
  string account_no = 1;
}
message BalanceResponse {
  string account_name = 1;
  string account_number = 2;
  double balance = 3;
}

service BankService {
  rpc TransferFunds(TransferRequest) returns (TransferResponse);
  rpc GetBalance(BalanceRequest) returns (BalanceResponse);
}